# socket-rest

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: docker.yml
